cleaned up the indentions
I cleaned up some indentions, added one photo and deleted another.

--- a/Encounter site project/about.html
+++ b/Encounter site project/about.html
@@ -67,8 +67,8 @@
 				</p> 
 				<ol>
 					<li>the breaking of bread (eating together)</li>
-					<li>to the apostles' teaching</li>
-					<li>to prayer</li>
+					<li>the apostles' teaching</li>
+					<li>prayer</li>
 				</ol>
 				<p>We try to imitate them. Generally:
 				</p>
