--- a/Encounter site project/special.html
+++ b/Encounter site project/special.html
@@ -10,7 +10,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	
 </head>
 
 <body>
@@ -18,13 +17,13 @@
 		<div class="container">
 			<div class="logo">
 				<a href="index.html">Encounter</a>
-			</div>
+			</div> <!-- end of logo -->
 			<p>
 				(a division of 
-				<!-- <a href="http://thebridgefresno.com/" target="_blank"> -->
-					The Bridge Church)
-<!-- 				</a>)
- -->			</p>
+				<!--<a href="http://thebridgefresno.com/" target="_blank"> -->
+				The Bridge Church)
+				<!--</a>)-->
+			</p>
 			<nav>
 				<ul>
 					<li><a href="index.html">Time and Place</a></li>
@@ -42,56 +41,52 @@
 			<h1>
 				Social events
 			</h1>
-		<section>
-			
-			<p>
-				We have special events from time to time. They give people a chance to know each other better. Some of the events we have had in the past include: game nights; barn dances; camping trips; hikes; and eating out together.
-			</p>
-
-			<p>
-				Here are some upcoming events:
-			</p>
-			<dl>
-				<dt>
-					Game night:
-				</dt>
-				 <dd>
-				 	Sarah & Ana's house. Bring games and your favorite snack. April 11, 2015
-				 </dd>
-			
-			<dt>
-				Half Half Dome:
-			</dt> 
-			<dd>
-				To get ready to hike Half Dome in September, come and hike half way, to Little Yosemite! April 18, 2015. Meet at 8am and carpool.
-			</dd>
-			
-			<dt>
-				A's Game:
-			</dt>
-			<dd>
-				April 25, 2015. Meet at 9am and carpool to Oakland.
-			</dd>
-
-			<dt>
-				<a href="http://www.thephantomoftheopera.com/ustour/">Phantom</a>
-				 of the Opera, San Francisco:
-			</dt>
-				 <dd>
-				 	August 22, 2015. We have reserved a bus, so you will not have to drive.
-				 </dd> 
-			</dl>
-		</section>
-	</main>
-	</div> <!-- end of container -->
-		
-		<footer>
-			<div class="container">
+			<section>
 				<p>
-					&copy 2015, by Jonathan Acomb
+					We have special events from time to time. They give people a chance to know each other better. Some of the events we have had in the past include: game nights; barn dances; camping trips; hikes; and eating out together.
 				</p>
-			</div> <!-- end container -->
-		</footer>
+				<p>
+					Here are some upcoming events:
+				</p>
+				<dl>
+					<dt>
+						Game night:
+					</dt>
+					 <dd>
+					 	Sarah & Ana's house. Bring games and your favorite snack. April 11, 2015
+					 </dd>
+				
+					<dt>
+						Half Half Dome:
+					</dt> 
+					<dd>
+						To get ready to hike Half Dome in September, come and hike half way, to Little Yosemite! April 18, 2015. Meet at 8am and carpool.
+					</dd>
+					<dt>
+						A's Game:
+					</dt>
+					<dd>
+						April 25, 2015. Meet at 9am and carpool to Oakland.
+					</dd>
+
+					<dt>
+						<a href="http://www.thephantomoftheopera.com/ustour/">Phantom</a>
+						 of the Opera, San Francisco:
+					</dt>
+					 <dd>
+					 	August 22, 2015. We have reserved a bus, so you will not have to drive.
+					 </dd> 
+				</dl>
+			</section>
+		</main>
+	</div> <!-- end of container -->
+	<footer>
+		<div class="container">
+			<p>
+				&copy 2015 Jonathan Acomb
+			</p>
+		</div> <!-- end container -->
+	</footer>
 	
 
 </body>
