--- a/Encounter site project/photo.html
+++ b/Encounter site project/photo.html
@@ -10,21 +10,18 @@
 	<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	
 </head>
 
 <body>
 	<header>
 		<div class="container">
-		
-		
 			<div class="logo">
 				<a href="index.html">Encounter</a>
-			</div>
+			</div> <!-- end of logo -->
 			<p>
 				(a division of 
-<!-- 				<a href="http://thebridgefresno.com/" target="_blank">
- -->					The Bridge Church)
+				<!--<a href="http://thebridgefresno.com/" target="_blank">
+				 -->The Bridge Church)
 				<!-- </a>) -->
 			</p>
 			<nav>
@@ -40,7 +37,6 @@
 		</div> <!-- end of container -->
 	</header>
 	<div class="container">
-		
 		<main>
 			<h1>
 				photo gallery
@@ -68,7 +64,7 @@
 			</div>
 			
 
-			<div class="box six">
+			<div class="box six">Smiles
 			<!-- This is for a photo added by css -->
 			</div>
 			
@@ -89,15 +85,12 @@
 
 		</main>
 	</div> <!-- end of container -->
-		
-		
-		<footer>
-			<div class="container">
-				<p>
-					&copy 2015 Jonathan Acomb
-				</p>
-			</div> <!-- end container -->
-		</footer>
-	
+	<footer>
+		<div class="container">
+			<p>
+				&copy 2015 Jonathan Acomb
+			</p>
+		</div> <!-- end container -->
+	</footer>
 </body>
 </html>
