--- a/Encounter/about.html
+++ b/Encounter/about.html
@@ -6,7 +6,7 @@
 		Encounter (at The Bridge)
 	</title>
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+	
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -21,8 +21,7 @@
 			</div><!--  end logo -->
 			<p>
 				(a division of 
-<!-- 				<a href="http://thebridgefresno.com/" target="_blank">
- -->					The Bridge Church)
+				<!--<a href="http://thebridgefresno.com/" target="_blank">-->					The Bridge Church)
 				<!-- </a>) -->
 			</p>
 			<nav>
@@ -59,29 +58,29 @@
 				</p>
 			</article>
 			<article class="article1">
-				<h3>
+				<h2>
 					What we do
-				</h3>
+				</h2>
 				<p>
-					In the Bible, in the book of Acts, the followers of the way made these things a priority:
+					In the Bible, in the book of Acts, the followers of Jesus made these things a priority:
 				</p> 
 				<ol>
 					<li>the breaking of bread (eating together)</li>
 					<li>the apostles' teaching</li>
 					<li>prayer</li>
 				</ol>
-				<p>We try to imitate them. Generally:
+				<p>We try to imitate this. We:
 				</p>
 				<ol>
 					<li>
-						We start our meeting by eating together for the first 30 minutes or so.
+						eat together for the first 30 minutes or so.
 					</li>
 
 					<li>
-						Then we study the Bible together for an hour.
+						study the Bible together for an hour.
 					</li>
 					<li>
-						For the last 30 minutes, we generally sing, but sometimes we pray. We used to spend more time praying.
+						sing or pray the last 30 minutes.
 					</li>
 				</ol>					
 				
