--- a/Encounter/about.html
+++ b/Encounter/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Encounter (at The Bridge)
+		Encounter (At The Bridge)
 	</title>
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	
