--- a/Encounter/contact.html
+++ b/Encounter/contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Encounter (at The Bridge)
+		Encounter (At The Bridge)
 	</title>
 	
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
