--- a/Encounter/about.html
+++ b/Encounter/about.html
@@ -65,9 +65,9 @@
 					In the Bible, in the book of Acts, the followers of Jesus made these things a priority:
 				</p> 
 				<ol>
-					<li>the breaking of bread (eating together)</li>
-					<li>the apostles' teaching</li>
-					<li>prayer</li>
+					<li>the breaking of bread (eating together).</li>
+					<li>the apostles' teaching.</li>
+					<li>prayer.</li>
 				</ol>
 				<p>We try to imitate this. We:
 				</p>
