colons within h tags
added some colons to some h tags

--- a/Encounter/about.html
+++ b/Encounter/about.html
@@ -44,7 +44,7 @@
 			
 			<article>
 				<h2>
-					our name
+					our name:
 				</h2>
 				<p>
 					As recorded in the Bible, when people <u>encounter</u>ed Jesus, many were transformed by knowing Him. 
@@ -59,7 +59,7 @@
 			</article>
 			<article class="article1">
 				<h2>
-					What we do
+					What we do:
 				</h2>
 				<p>
 					In the Bible, in the book of Acts, the followers of Jesus made these things a priority:
