--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -70,7 +70,7 @@
 			
 			<article class="article1">
 				<h2>
-					This week at Encounter
+					This week at Encounter:
 				</h2>
 				<p>
 					We are reviewing the first chapter of A.W. Tozer's <u>Pursuit of God</u>. The ladies are bringing food this week. (We take turns.) We look forward to seeing you!
