--- a/Encounter/special.html
+++ b/Encounter/special.html
@@ -43,7 +43,7 @@
 			</h1>
 			<section>
 				<h2>
-					upcoming events
+					upcoming events:
 				</h2>
 				<p>
 					Special events give people a chance to know each other better. In the past we have had: game nights; progressive dinners; barn dances; camping trips; and hikes.
