--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -63,7 +63,7 @@
 					<dd>South Hall, The Bridge Church<br/>
 						<a href="https://www.google.com/maps/place/3438+E+Ashlan+Ave,+Fresno,+CA+93726/@36.7941009,-119.7673903,846m/data=!3m1!1e3!4m2!3m1!1s0x80945d9842a01cc1:0xf8b07509f36e91eb" target="_blank">3438 E. Ashlan Ave, Fresno, CA 93726</a><br/>
 					
-						On Ashlan, east of 1st and west of Milbrook<br/>The building at the south end of the parking lot
+						On Ashlan, Between First and Milbrook<br/>The building at the south end of the parking lot
 					</dd>
 				</dl>
 			</section>
