--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Encounter (at The Bridge)
+		Encounter (At The Bridge)
 	</title>
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	
@@ -42,8 +42,51 @@
 				<!-- image of KCM and I in css -->
 			</div> <!-- this closes the hero -->
 			<h1>
-				Time & Place
+				About Us
 			</h1>
+			
+			<article>
+				<h2>
+					our name:
+				</h2>
+				<p>
+					As recorded in the Bible, when people <u>encounter</u>ed Jesus, many were transformed by knowing Him. 
+				</p>
+				
+				<p>
+					 Two of the men who spent three years with Jesus were in front of religious rulers. The rulers could tell that these men were uneducated people, but they knew that these men had been with Jesus because they were bold.
+				</p>
+				<p>
+					In the same way as these people were transformed by an <u>encounter</u> with Jesus, we want that to be true of us and anyone who visits our group.
+				</p>
+			</article>
+			<article class="article1">
+				<h2>
+					What we do:
+				</h2>
+				<p>
+					In the Bible, in the book of Acts, the followers of Jesus made these things a priority:
+				</p> 
+				<ol>
+					<li>the breaking of bread (eating together).</li>
+					<li>the apostles' teaching.</li>
+					<li>prayer.</li>
+				</ol>
+				<p>We try to imitate this. We:
+				</p>
+				<ol>
+					<li>
+						eat together for the first 30 minutes or so.
+					</li>
+
+					<li>
+						study the Bible together for an hour.
+					</li>
+					<li>
+						sing or pray the last 30 minutes.
+					</li>
+				</ol>	
+			</article>				
 			<section>
 				<dl>
 					<dt>
