--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -26,8 +26,8 @@
 			</p>
 			<nav>
 				<ul>
-					<li><a href="index.html">Time and Place</a></li>
-					<li><a href="about.html">About Us</a></li>
+					<li><a href="index.html">About us</a></li>
+					<!-- <li><a href="about.html">About Us</a></li> -->
 					<li><a href="ongoing.html">ongoing events</a></li>
 					<li><a href="special.html">social events</a></li>
 					<li><a href="photo.html">photo gallery</a></li>
