--- a/Encounter/contact.html
+++ b/Encounter/contact.html
@@ -25,8 +25,8 @@
 			</p>
 			<nav>
 				<ul>
-					<li><a href="index.html">Time and Place</a></li>
-					<li><a href="about.html">about us</a></li>
+					<li><a href="index.html">about us</a></li>
+					<!-- <li><a href="about.html">about us</a></li> -->
 					<li><a href="ongoing.html">ongoing events</a></li>
 					<li><a href="special.html">social events</a></li>
 					<li><a href="photo.html">photo gallery</a></li>
