took out an old link
took out some old links

--- a/Encounter/about.html
+++ b/Encounter/about.html
@@ -20,9 +20,7 @@
 				<a href="index.html">Encounter</a>
 			</div><!--  end logo -->
 			<p>
-				(a division of 
-				<!--<a href="http://thebridgefresno.com/" target="_blank">-->					The Bridge Church)
-				<!-- </a>) -->
+				(a division of The Bridge Church)
 			</p>
 			<nav>
 				<ul>
