--- a/Encounter/contact.html
+++ b/Encounter/contact.html
@@ -18,15 +18,11 @@
 				<a href="index.html">Encounter</a>
 			</div>
 			<p>
-				(a division of 
-				<!-- <a href="http://thebridgefresno.com/" target="_blank"> -->
-				The Bridge Church)
-				<!-- </a>) -->
+				(a division of The Bridge Church)
 			</p>
 			<nav>
 				<ul>
 					<li><a href="index.html">about us</a></li>
-					<!-- <li><a href="about.html">about us</a></li> -->
 					<li><a href="ongoing.html">ongoing events</a></li>
 					<li><a href="special.html">social events</a></li>
 					<li><a href="photo.html">photo gallery</a></li>
