--- a/Encounter/photo.html
+++ b/Encounter/photo.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-		Encounter (At The Bridge)
+		Encounter
 	</title>
 	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	
