right left divs
I simplified the css by styling some divs instead of styling articles
and sections by themselves.

--- a/Encounter/ongoing.html
+++ b/Encounter/ongoing.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
@@ -34,6 +33,7 @@
 	</header>
 	<div class="container">	
 		<main>
+			<div class="left">
 			<h1>
 				ongoing events
 			</h1>
@@ -61,6 +61,7 @@
 					</dd>
 				</dl>
 			</section>
+		</div>
 		</main>
 	</div> <!-- end of container -->
 	<footer>
