--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -114,7 +114,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						We are reviewing the first chapter of A.W. Tozer's <u>Pursuit of God</u>. The ladies are bringing food this week. (We take turns.) We look forward to seeing you!
+						We are reviewing the second chapter of A.W. Tozer's <u>Pursuit of God</u>. The chapter is called "The Blessedness of Possessing Nothing." Intriguing! It is a potluck night. We look forward to seeing you!
 					</p>
 				</article>
 			</div> <!-- end class right -->
