--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -114,7 +114,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						We are reviewing the third chapter of A.W. Tozer's <u>Pursuit of God</u>. The chapter is about a veil that can get in the way of us being close to God. This week the guys are bringing food. We look forward to seeing you!
+						We are reviewing the third chapter of A.W. Tozer's <u>Pursuit of God</u>. The chapter is about a veil that can get in the way of us being close to God. This week the men are bringing food. We look forward to seeing you!
 					</p>
 				</article>
 			</div> <!-- end class right -->
