--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -114,7 +114,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						We are reviewing the fourth chapter of A.W. Tozer's <u>Pursuit of God</u>. The chapter is called "Aprehending God". It is pizza night. January through April birthday people bring food.
+						We are reviewing the fifth chapter of A.W. Tozer's <u>Pursuit of God</u>. The chapter is called "The Universal Presence". It is the ladies' night to bring food.
 					</p>
 				</article>
 			</div> <!-- end class right -->
