update for week

--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -114,7 +114,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						We are reviewing the fifth chapter of A.W. Tozer's <u>Pursuit of God</u>. The chapter is called "The Universal Presence". It is the ladies' night to bring food.
+						We are meeting at Peoples Church instead from 6 pm for the National Day of Prayer. If you come at 5:30, there will be music. Then there will be prayer until 7:10 or so.
 					</p>
 				</article>
 			</div> <!-- end class right -->
