--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -114,7 +114,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						We are meeting at Peoples Church instead from 6 pm for the National Day of Prayer. If you come at 5:30, there will be music. Then there will be prayer until 7:10 or so.
+						We are back to our usual place.  We are studying about God's speaking voice, as part of our study of Tozer's <u>Pursuit of God</u>. The men are bringing food.
 					</p>
 				</article>
 			</div> <!-- end class right -->
