--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -114,7 +114,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						We are back to our usual place.  We are studying about God's speaking voice, as part of our study of Tozer's <u>Pursuit of God</u>. The men are bringing food.
+						This week we are studying about faith in God being as simple as looking to Him. We are eating pizza. If your birthday is in the months May through August, please bring some.
 					</p>
 				</article>
 			</div> <!-- end class right -->
