--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -9,6 +9,9 @@
 	
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <script src="js/vendor/angular.min.js"></script>
+	<script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
 </head>
 
 <body>
@@ -128,5 +131,7 @@
 			</p>
 		</div> <!-- end of container -->
 	</footer>
+
+	
 </body>
 </html>
