--- a/Encounter/special.html
+++ b/Encounter/special.html
@@ -10,9 +10,11 @@
 
 	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="js/vendor/angular.min.js"></script>
+	<script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
 </head>
 
-<body>
+<body ng-app="myEvents">
 	<header>
 		<div class="container">
 			<div class="logo">
