--- a/Encounter/index.html
+++ b/Encounter/index.html
@@ -117,7 +117,7 @@
 						This week at Encounter:
 					</h2>
 					<p>
-						This week we are studying about faith in God being as simple as looking to Him. We are eating pizza. If your birthday is in the months May through August, please bring some.
+						This week we are studying chapter 9 in the Tozer book, Restoring the Creator-Creation Relationship. The ladies are bringing food.
 					</p>
 				</article>
 			</div> <!-- end class right -->
